--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/github-script@v7.0.1
         with:
           # The script to run
-          script: import { createAppAuth } from "@octokit/auth-app";
+          script: const { createAppAuth } = require("@octokit/auth-app")
