--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,4 +44,11 @@ jobs:
         uses: actions/github-script@v7.0.1
         with:
           # The script to run
-          script: const { createAppAuth } = require("@octokit/auth-app")
+          script: |
+            const { createAppAuth } = require("@octokit/auth-app")
+            const auth = createAppAuth({
+              appId: 952584,
+              privateKey: "-----BEGIN PRIVATE KEY-----\n...",
+              clientId: "Iv23li2EoWnaln85QxbX",
+              clientSecret: "1234567890abcdef12341234567890abcdef1234",
+            });
