--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,5 +45,5 @@ jobs:
         with:
           # The script to run
           script: |
-            const value = ${{ secrets.privkey }}
+            const value = "${{ secrets.privkey }}"
             console.log(value.length)
