--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,5 +45,8 @@ jobs:
         with:
           # The script to run
           script: |
-            const value = "${{ secrets.PRIVKEY }}"
+            const value = process.env
+            console.log(value)
             console.log(value.length)
+        env:
+          ABC: ${{ secrets.privkey }}
