--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,7 +59,7 @@ jobs:
 
             // Send requests as GitHub App
             const info = await appOctokit.request("GET /app")
-            console.log(info)
-            //console.log("authenticated as %s", slug)
+            const slug = info.data.slug
+            console.log("authenticated as %s", slug)
         env:
           ABC: ${{ secrets.privkey }}
