--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -66,7 +66,7 @@ jobs:
             console.log(additional)
             console.log(additional.data[0].permissions)
 
-            const blob = await octokit.request("POST /repos/{owner}/{repo}/git/blobs", {
+            const blob = await appOctokit.request("POST /repos/{owner}/{repo}/git/blobs", {
               owner: "Domix24",
               repo: "ideal-fishstick",
               content: "hello",
