--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -84,5 +84,12 @@ jobs:
               encoding: "utf-8"
             })
             console.log(blob)
+
+            const blobi = await octokit.request('GET /repos/{owner}/{repo}/git/blobs/{file_sha}', {
+              owner: "Domix24",
+              repo: "ideal-fishstick",
+              file_sha: blob.data.sha
+            })
+            console.log(blobi)
         env:
           ABC: ${{ secrets.privkey }}
