--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -79,7 +79,8 @@ jobs:
 
             const issue = appiOctokit.request("POST /repos/{owner}/{repo}/issues", {
               owner: "Domix24",
-              repo: "ideal-fishstick"
+              repo: "ideal-fishstick",
+              title: `hey ${new Date().toISOString()}`
             })
             console.log(issue)
 
