--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -82,7 +82,7 @@ jobs:
               repo: "ideal-fishstick",
               title: `hey ${new Date().toISOString()}`
             })*/
-            const issue = appiOctokit.request("GET /repos/{owner}/{repo}/issues/{issue_number}, {
+            const issue = appiOctokit.request("GET /repos/{owner}/{repo}/issues/{issue_number}", {
               owner: "Domix24",
               repo: "ideal-fishstick",
               issue_number: 1
