--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -127,3 +127,65 @@ jobs:
             console.log(ref)*/
         env:
           ABC: ${{ secrets.privkey }}
+  build-v2:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
+          
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.9.1
+
+      - run: npm install @octokit/core @octokit/auth-app
+
+      - name: GitHub Script
+        uses: actions/github-script@v7.0.1
+        with:
+          # The script to run
+          script: |
+            const { Octokit } = require("@octokit/core")
+            const { createAppAuth } = require("@octokit/auth-app")
+            
+            const appOctokit = new Octokit({
+              authStrategy: createAppAuth,
+              auth: {
+                appId: 952584,
+                privateKey: process.env.ABC,
+                clientId: "Iv23li2EoWnaln85QxbX"
+              },
+            })
+
+            const additional = await appOctokit.request("GET /app/installations")
+            console.log(additional)
+            console.log(additional.data[0].permissions)
+
+            // new auth
+            const appiOctokit = new Octokit({
+              authStrategy: createAppAuth,
+              auth: {
+                installationId: additional.data[0].id,
+                appId: additional.data[0].app_id,
+                privateKey: process.env.ABC,
+                clientId: "Iv23li2EoWnaln85QxbX"
+              },
+            })
+
+            const tooken = await appiOctokit.request("POST /app/installations/{installation_id}/access_tokens", {
+              installationId: additional.data[0].id
+            })
+            console.log(tooken)
+        env:
+          ABC: ${{ secrets.privkey }}
