--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -153,6 +153,7 @@ jobs:
 
       - name: GitHub Script
         uses: actions/github-script@v7.0.1
+        id: github-script
         with:
           # The script to run
           script: |
@@ -190,3 +191,6 @@ jobs:
             return tooken.data.token
         env:
           ABC: ${{ secrets.privkey }}
+
+      - name: Get result
+        run: echo "${{steps.github-script.outputs.result}}"
