--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -193,4 +193,4 @@ jobs:
           ABC: ${{ secrets.privkey }}
 
       - name: Get result
-        run: echo "${{steps.github-script.outputs.result}}"
+        run: gh issue list
