--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -199,4 +199,4 @@ jobs:
       - name: Get result
         run: gh issue list
         env:
-          GH_TOKEN: ${{ steps.testo.VALUX }}
+          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
