--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -215,6 +215,6 @@ jobs:
               }
             }
           ' -F repo="ideal-fishstick" -F owner="Domix24" > query_data.json
-          echo OID=$(jq '.data.repository' query_data.json) >> $GITHUB_OUTPUT 
+          echo OID=$(jq '.data.repository.defaultBranchRef.target.history.nodes[0].oid' query_data.json) >> $GITHUB_OUTPUT 
         env:
           GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
