--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -216,6 +216,7 @@ jobs:
             }
           ' -F repo="ideal-fishstick" -F owner="Domix24" > query_data.json
           OID=$(jq '.data.repository.defaultBranchRef.target.history.nodes[0].oid' query_data.json)
-          echo $OID
+          DATE=$(date)
+          echo $OID $DATE
         env:
           GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
