--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -217,6 +217,34 @@ jobs:
           ' -F repo="ideal-fishstick" -F owner="Domix24" > query_data.json
           OID=$(jq '.data.repository.defaultBranchRef.target.history.nodes[0].oid' query_data.json)
           FILECO=$(date | base64)
-          echo $OID $FILECO "$FILECO"
+          gh api graphql -H X-Github-Next-Global-ID:1 -f query='
+            mutation ($input: CreateCommitOnBranchInput!) {
+              createCommitOnBranch(input: $input) {
+                commit {
+                  url
+                }
+              }
+            }
+            variables {
+              "input": {
+                "branch": {
+                  "repositoryNameWithOwner": "Domix24/ideal-fishstick",
+                  "branchName": "main"
+                },
+                "message": {
+                  "headline": "Hello!"
+                },
+                "fileChanges": {
+                  "additions": [
+                    {
+                      "path": "testfile.txt",
+                      "contents": $content
+                    }
+                  ]
+                },
+                "expectedHeadOid": $oid
+              }
+            }
+          ' -F oid=$OID -F content="$FILECO" > query_data.json
         env:
           GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
