--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -225,6 +225,7 @@ jobs:
                 }
               }
             }
+          ' -f variables='
             {
               "input": {
                 "branch": {
