--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -226,6 +226,7 @@ jobs:
               }
             }
           ' -F input[branch][repositoryNameWithOwner]="Domix24/ideal-fishstick"
+            -F input[branch][branchName]="main"
             -F oid=$OID
             -F content="$FILECO" > query_data.json
         env:
