--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -227,8 +227,8 @@ jobs:
             }
           ' -F input[branch][repositoryNameWithOwner]="Domix24/ideal-fishstick" \
             -F input[branch][branchName]="main" \
-            -F input[messaage][headline]=":)" \
-            -F oid=$OID
+            -F input[message][headline]=":)" \
+            -F input[expectedHeadOid]=$OID \
             -F content="$FILECO" > query_data.json
         env:
           GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
