--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -218,7 +218,8 @@ jobs:
             }
           ' -F repo="ideal-fishstick" -F owner="Domix24" > query_data.json
           OID=$(jq '.data.repository.defaultBranchRef.target.history.nodes[0].oid' query_data.json)
-          OID=${OID#"|"}
+          OID=${OID#"\""}
+          OID=${OID%"\""}
           FILECO=$(date | base64)
           gh api graphql -H X-Github-Next-Global-ID:1 -f query='
             mutation ($input: CreateCommitOnBranchInput!) {
