--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -235,5 +235,6 @@ jobs:
             -F input[expectedHeadOid]="$OID" \
             -F input[fileChanges][additions][0][path]="when" \
             -F input[fileChanges][additions][0][contents]="$FILECO"
-#        env:
+        env:
+          GH_TOKEN: ${{ github.token }}
 #          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
