--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -233,7 +233,7 @@ jobs:
             -F input[branch][branchName]="main" \
             -F input[message][headline]=":)" \
             -F input[expectedHeadOid]="$OID" \
-            -F input[fileChanges][additions][0][path]="when" \
+            -F input[fileChanges][additions][][path]="when" \
 #            -F input[fileChanges][additions][0][contents]="$FILECO"
         env:
           GH_TOKEN: ${{ github.token }}
