--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -221,6 +221,7 @@ jobs:
           OID=${OID#"\""}
           OID=${OID%"\""}
           FILECO=$(date | base64)
+          echo '{ "path": "bar", contents: "baz" }'
           gh api graphql -H X-Github-Next-Global-ID:1 -f query='
             mutation ($input: CreateCommitOnBranchInput!) {
               createCommitOnBranch(input: $input) {
@@ -233,8 +234,7 @@ jobs:
             -F input[branch][branchName]="main" \
             -F input[message][headline]=":)" \
             -F input[expectedHeadOid]="$OID" \
-            -F input[fileChanges][additions][][path]="when" \
-            -F input[fileChanges][additions][0][contents]="$FILECO"
+            -F input[fileChanges][additions][]='{ "path": "myfile.info", "contents": "$FILECO" }'
         env:
           GH_TOKEN: ${{ github.token }}
 #          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
