--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -221,6 +221,7 @@ jobs:
           OID=${OID#"\""}
           OID=${OID%"\""}
           FILECO=$(date | base64)
+          jq -n '{"branch":{"repositoryNameWithOwner":"Domix24/ideal-fishstick","branchName":"main"},"message":{"headline":""},"expectedHeadOid":"$OID"}' | \
           gh api graphql -H X-Github-Next-Global-ID:1 -f query='
             mutation ($input: CreateCommitOnBranchInput!) {
               createCommitOnBranch(input: $input) {
@@ -229,11 +230,7 @@ jobs:
                 }
               }
             }
-          ' -F input[branch][repositoryNameWithOwner]="Domix24/ideal-fishstick" \
-            -F input[branch][branchName]="main" \
-            -F input[message][headline]=":)" \
-            -F input[expectedHeadOid]="$OID" \
-            -f input[fileChanges][additions][]='{ "path": "myfile.info", "contents": "$FILECO" }'
+          '
         env:
           GH_TOKEN: ${{ github.token }}
 #          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
