--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -230,7 +230,7 @@ jobs:
                 }
               }
             }
-          '
+          ' --input -
         env:
           GH_TOKEN: ${{ github.token }}
 #          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
