--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -221,16 +221,8 @@ jobs:
           OID=${OID#"\""}
           OID=${OID%"\""}
           FILECO=$(date | base64)
-          jq -n '{"branch":{"repositoryNameWithOwner":"Domix24/ideal-fishstick","branchName":"main"},"message":{"headline":""},"expectedHeadOid":"$OID"}' >> info.json
-          gh api graphql -H X-Github-Next-Global-ID:1 -f query='
-            mutation ($input: CreateCommitOnBranchInput!) {
-              createCommitOnBranch(input: $input) {
-                commit {
-                  url
-                }
-              }
-            }
-          ' --input info.json
+          jq -n '{"query": "mutation ($input: CreateCommitOnBranchInput!) { createCommitOnBranch(input: $input) { commit { url } } }", "branch":{"repositoryNameWithOwner":"Domix24/ideal-fishstick","branchName":"main"},"message":{"headline":""},"expectedHeadOid":"$OID"}' >> info.json
+          gh api graphql -H X-Github-Next-Global-ID:1 --input info.json
         env:
           GH_TOKEN: ${{ github.token }}
 #          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
