--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -222,5 +222,5 @@ jobs:
           jq -n "{\"query\": \"mutation (\$input: CreateCommitOnBranchInput!) { createCommitOnBranch(input: \$input) { commit { url } } }\", \"variables\": {\"input\": {\"branch\": {\"repositoryNameWithOwner\":\"domix24/ideal-fishstick\",\"branchName\":\"main\"},\"expectedHeadOid\":$OID,\"message\":{\"headline\":\"\"},\"fileChanges\":{\"additions\":[{\"path\":\"file.txt\",\"contents\":\"$FILECO\"}]}}}}" >> info.json
           gh api graphql -H X-Github-Next-Global-ID:1 --input info.json
         env:
-          GH_TOKEN: ${{ github.token }}
-#          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
+#          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ steps.testo.outputs.VALUX }}
